force-app/main/default/objects/BillingAndPayment_Settings__c/BillingAndPayment_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>BillingAndPayment Settings</label>
</CustomObject>