force-app/main/default/objects/BillingAndPayment_Settings__c/fields/Bypass_Billing__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Billing</label>
    <type>Checkbox</type>
</CustomField>