force-app/main/default/objects/BillingAndPayment_Settings__c/fields/Bypass_Initial_Fee__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Initial_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Initial Fee</label>
    <type>Checkbox</type>
</CustomField>