force-app/main/default/objects/BillingAndPayment_Settings__c/fields/Bypass_Reinstatement__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Reinstatement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Reinstatement</label>
    <type>Checkbox</type>
</CustomField>